# libcoap-playground

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  client.c  common.c  common.h  server.c
